--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <main>
         <article class="box">
             <h1>Prottay Karim</h1>
-            <div><a href="mailto:your.email@example.com">your-email@example.com</a></div>
+            <div><a href="mailto:your.email@example.com">prottayk45@gmail.com</a></div>
             
             <section class="box">
                 <h2>
