--- a/src/index.html
+++ b/src/index.html
@@ -21,9 +21,9 @@
                     Social media
                 </h2>
                 <ul>
-                    <li><a href="https://github.com/<handle>">@github_handle</a></li>
-                    <li><a href="https://linkedin.com/in/<handle>">@linkedin_handle</a></li>
-                    <li><a href="https://twitter.com/<handle>">@twitter_handle</a></li>
+                    <li><a href="https://github.com/prottayislive">@github_handle</a></li>
+                    <li><a href="https://linkedin.com/in/prottayk">@linkedin_handle</a></li>
+                    <li><a href="https://twitter.com/karim_prottay">@twitter_handle</a></li>
                 </ul>    
             </section>
             
@@ -31,12 +31,12 @@
                 <div class="education">
                     <h2>
                         <i class="fa fa-certificate" aria-hidden="true"></i>
-                        School name
+                        RMIT University
                     </h2>
-                    <h3>Major</h3>
+                    <h3>Bachelor of Information Technology</h3>
                     <ul>
-                        <li>GPA: 4.0</li>
-                        <li>Years</li>
+                        <li>Major: Data Science</li>
+                        <li>Minor: Finance and Economics</li>
                     </ul>
                 </div>
             </section>
@@ -47,8 +47,8 @@
                     Skills
                 </h2>
                 <ul>
-                    <li>CSS</li>
-                    <li>HTML</li>
+                    <li>Java</li>
+                    <li>Python</li>
                     <li>JavaScript</li>
                     <li>Git</li>
                     <li>Visual Studio Code</li>
